log out functionality applied

--- a/src/partials/header_home.html
+++ b/src/partials/header_home.html
@@ -7,18 +7,18 @@
       <p class="header__title">Filmoteka</p>
     </a>
     <div class="header__list">
-      <div class=layout__form> 
+      <div class="layout__form">
         <div class="header__item header__register">
           <p class="header__link" id="register">register</p>
         </div>
-          <div class="header__item header__log">
+        <div class="header__item header__log">
           <p class="header__link" id="log-in">log in</p>
-          </div>
+        </div>
         <div class="header__item">
           <a class="header__link header__link--active" href="/src/index.html">home</a>
         </div>
         <div class="header__item">
-          <a class="header__link " href="/src/library.html">my library</a>
+          <a class="header__link" href="/src/library.html">my library</a>
         </div>
 
         <form class="login__form" id="register-div">
@@ -32,7 +32,7 @@
             required
           />
           <input
-          class="login__input"
+            class="login__input"
             type="password"
             id="login-password"
             name="login-password"
@@ -43,25 +43,26 @@
         </form>
         <button class="login__btn" id="log-btn">log in</button>
         <button class="login__btn" id="register-btn">register</button>
-        <p class="header__link logged">logged in</p>
+        <p class="header__link logged"></p>
+        <button class="header__logout" id="logout-btn">LOG OUT</button>
       </div>
     </div>
   </div>
 
-<form class="form" id="form-search">
-  <input
-    class="form__input"
-    type="text"
-    name="search"
-    autocomplete="off"
-    placeholder="Movie search"
-    required
-  />
-  <button class="form__btn" type="submit">
-    <svg class="form__icon" width="16" height="16">
-      <use href="/src/images/icons.svg#icon-search"></use>
-    </svg>
-  </button>
-  <div class="form__result"></div>
-</form>
+  <form class="form" id="form-search">
+    <input
+      class="form__input"
+      type="text"
+      name="search"
+      autocomplete="off"
+      placeholder="Movie search"
+      required
+    />
+    <button class="form__btn" type="submit">
+      <svg class="form__icon" width="16" height="16">
+        <use href="/src/images/icons.svg#icon-search"></use>
+      </svg>
+    </button>
+    <div class="form__result"></div>
+  </form>
 </header>
