--- a/src/partials/header_library.html
+++ b/src/partials/header_library.html
@@ -6,14 +6,14 @@
       </svg>
       <p class="header__title">Filmoteka</p>
     </a>
-    <div class="header__list"> 
-      <div class=layout__form> 
+    <div class="header__list">
+      <div class="layout__form">
         <div class="header__item header__register">
           <p class="header__link" id="register">register</p>
         </div>
-          <div class="header__item header__log">
+        <div class="header__item header__log">
           <p class="header__link" id="log-in">log in</p>
-          </div>
+        </div>
         <div class="header__item">
           <a class="header__link" href="/src/index.html">home</a>
         </div>
@@ -31,7 +31,7 @@
             required
           />
           <input
-          class="login__input"
+            class="login__input"
             type="password"
             id="login-password"
             name="login-password"
@@ -43,7 +43,8 @@
 
         <button class="login__btn" id="log-btn">Log in</button>
         <button class="login__btn" id="register-btn">Register</button>
-        <p class="header__link logged">logged in</p>
+        <p class="header__link logged"></p>
+        <button class="header__logout" id="logout-btn">LOG OUT</button>
       </div>
     </div>
   </div>
@@ -52,5 +53,4 @@
     <button type="button" class="button__status">watched</button>
     <button type="button" class="button__status">queue</button>
   </div>
-  
 </header>
