last touches on login elements

--- a/src/partials/header_home.html
+++ b/src/partials/header_home.html
@@ -44,7 +44,7 @@
         <button class="login__btn" id="log-btn">log in</button>
         <button class="login__btn" id="register-btn">register</button>
         <p class="header__link logged"></p>
-        <button class="header__logout" id="logout-btn">LOG OUT</button>
+        <button class="header__logout" style="visibility: hidden" id="logout-btn">LOG OUT</button>
       </div>
     </div>
   </div>
