--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -1,7 +1,7 @@
 <div class="modal__backdrop modal__hidden">
   <div class="modal">
     <button type="'button" class="modal__close">
-      <img height="14" width="14" src="./images/closeButton.svg" />
+      <img height="14" width="14" src="./images/closeButton.svg" alt=""/>
     </button>
     <div class="modal__container">
       <div class="modal__poster-container">
