--- a/src/partials/modal_team.html
+++ b/src/partials/modal_team.html
@@ -1,7 +1,7 @@
 <div class="modal-team__backdrop modal-team__hidden">
   <div class="modal-team">
     <button type="'button" class="modal-team__close">
-      <img width="14" height="14" src="./images/close-button-film.svg" />
+      <img width="14" height="14" src="./images/close-button-film.svg" alt="" />
     </button>
     <div class="modal-team__head-div">
       <img width="100" height="" src="./images/icon-logo-no-color-mid.svg" alt="logo" class="modal-team__head-img"/>
@@ -91,7 +91,7 @@
       </div>
     </div>
     <button type="'button" id="modal-team__btn-scroll" class="modal-team__scroll">
-      <img width="14" height="14" src="./images/scroll-modal-team-back.svg" />
+      <img width="14" height="14" src="./images/scroll-modal-team-back.svg" alt="" />
     </button>
   </div>
 </div>
