--- a/src/partials/modal_video.html
+++ b/src/partials/modal_video.html
@@ -1,7 +1,7 @@
 <div class="modal-video__backdrop modal-video__hidden">
   <div class="modal-video">
     <button type="'button" class="modal-video__close">
-      <img height="14" width="14" src="./images/closeButtonVideo.svg" />
+      <img height="14" width="14" src="./images/closeButtonVideo.svg" alt=""/>
     </button>
     <div class="modal-video__container">
       <iframe allow="fullscreen"> </iframe>
