--- a/src/partials/pagination.html
+++ b/src/partials/pagination.html
@@ -1,6 +1,6 @@
 <section class="pagination is-hidden">
   <button id="previous" class="pagination__button--arrow">
-    <img src="./images/icons-pagination/arrow-left.svg" />
+    <img src="./images/icons-pagination/arrow-left.svg" alt="" />
   </button>
   <button id="first" class="pagination__button--hidden-on-mobile"></button>
   <div id="dot" class="pagination__button--hidden-on-mobile">...</div>
@@ -12,6 +12,6 @@
   <div id="dot2" class="pagination__button--hidden-on-mobile">...</div>
   <button id="last" class="pagination__button--hidden-on-mobile"></button>
   <button id="next" class="pagination__button--arrow">
-    <img src="./images/icons-pagination/arrow-right.svg" />
+    <img src="./images/icons-pagination/arrow-right.svg" alt=""/>
   </button>
 </section>
