--- a/src/partials/paginationlibrary.html
+++ b/src/partials/paginationlibrary.html
@@ -1,6 +1,6 @@
 <section class="pagination is-hidden">
   <button id="previousLibrary" class="pagination__button--arrow">
-    <img src="./images/icons-pagination/arrow-left.svg" />
+    <img src="./images/icons-pagination/arrow-left.svg" alt="" />
   </button>
   <button id="firstLibrary" class="pagination__button--hidden-on-mobile"></button>
   <div id="dotLibrary" class="pagination__button--hidden-on-mobile">...</div>
@@ -12,6 +12,6 @@
   <div id="dot2Library" class="pagination__button--hidden-on-mobile">...</div>
   <button id="lastLibrary" class="pagination__button--hidden-on-mobile"></button>
   <button id="nextLibrary" class="pagination__button--arrow">
-    <img src="./images/icons-pagination/arrow-right.svg" />
+    <img src="./images/icons-pagination/arrow-right.svg" alt=""/>
   </button>
 </section>
