--- a/src/partials/modal_team.html
+++ b/src/partials/modal_team.html
@@ -4,7 +4,13 @@
       <img width="14" height="14" src="./images/close-button-film.svg" alt="" />
     </button>
     <div class="modal-team__head-div">
-      <img width="100" height="" src="./images/icon-logo-no-color-mid.svg" alt="logo" class="modal-team__head-img"/>
+      <img
+        width="100"
+        height=""
+        src="./images/icon-logo-no-color-mid.svg"
+        alt="logo"
+        class="modal-team__head-img"
+      />
       <div class="modal-team__head-title">
         <h2 class="modal-team__header">Popcorn Eaters</h2>
         <h3 class="modal-team__header-add">goit js group</h3>
@@ -13,80 +19,153 @@
     <!-- <h2 class="modal-team__header">Zespół grupa nr: 5</h2> -->
     <div class="team-members">
       <div class="team-member">
-        <img width="200" height="200" src="./images/img-team/michał-mazur.jpg" alt="Michał Mazur" class="team-member__photo"
-             srcset="./images/img-team/michał-mazur.jpg 1x, ./images/img-team/michał-mazur@2.jpg 2x" />
+        <img
+          width="200"
+          height="200"
+          src="./images/img-team/Michal-Mazur.jpg"
+          alt="Michał Mazur"
+          class="team-member__photo"
+          srcset="./images/img-team/Michal-mazur.jpg 1x, ./images/img-team/Michal-Mazur@2.jpg 2x"
+        />
         <h3 class="team-member__name">Michał Mazur</h3>
         <h4 class="team-member__function">Team Leader</h4>
         <p class="team-member__description">
-          Pochodzi z Warszawy. Główne zainteresowania to bouldering, lotnictwo oraz podróże w azjatyckie klimaty.
-          Zdecydowanie jest maniakiem <i>problem solver</i> czyli jak coś nie działa to na pewno musi wiedzieć dlaczego.
+          Pochodzi z Warszawy. Główne zainteresowania to bouldering, lotnictwo oraz podróże w
+          azjatyckie klimaty. Zdecydowanie jest maniakiem <i>problem solver</i> czyli jak coś nie
+          działa to na pewno musi wiedzieć dlaczego.
         </p>
       </div>
       <div class="team-member">
-        <img width="200" height="200" src="./images/img-team/mateusz-trepkowski.jpg" alt="Mateusz Trepkowski" class="team-member__photo"
-             srcset="./images/img-team/mateusz-trepkowski.jpg 1x, ./images/img-team/mateusz-trepkowski@2.jpg 2x" />
+        <img
+          width="200"
+          height="200"
+          src="./images/img-team/Mateusz-Trepkowski.jpg"
+          alt="Mateusz Trepkowski"
+          class="team-member__photo"
+          srcset="
+            ./images/img-team/Mateusz-Trepkowski.jpg   1x,
+            ./images/img-team/Mateusz-Trepkowski@2.jpg 2x
+          "
+        />
         <h3 class="team-member__name">Mateusz Trepkowski</h3>
         <h4 class="team-member__function">Scrum Master</h4>
         <p class="team-member__description">
-          Mieszka w Gdańsku, lubi słuchać muzyki i oglądać filmy. Interesuje się lotnictwem, operą oraz teatrem.
+          Mieszka w Gdańsku, lubi słuchać muzyki i oglądać filmy. Interesuje się lotnictwem, operą
+          oraz teatrem.
         </p>
       </div>
       <div class="team-member">
-        <img width="200" height="200" src="./images/img-team/beata-hryniewicka.jpg" alt="Beata Hryniewicka" class="team-member__photo"
-             srcset="./images/img-team/beata-hryniewicka.jpg 1x, ./images/img-team/beata-hryniewicka@2.jpg 2x" />
+        <img
+          width="200"
+          height="200"
+          src="./images/img-team/Beata-Hryniewicka.jpg"
+          alt="Beata Hryniewicka"
+          class="team-member__photo"
+          srcset="
+            ./images/img-team/Beata-Hryniewicka.jpg   1x,
+            ./images/img-team/Beata-Hryniewicka@2.jpg 2x
+          "
+        />
         <h3 class="team-member__name">Beata Hryniewicka</h3>
         <p class="team-member__description">
-          Mieszka w Lublinie. Zajmuje się nieruchomościami oraz prawem. W wolnym czasie lubi biegać, 
+          Mieszka w Lublinie. Zajmuje się nieruchomościami oraz prawem. W wolnym czasie lubi biegać,
           oraz kosztować orientalne jedzenie. Ceni sobie szczerość, prywatnie żona i matka w jednym.
         </p>
       </div>
       <div class="team-member">
-        <img width="200" height="200" src="./images/img-team/tatsiana-rudava.jpg" alt="Tatsiana Rudava" class="team-member__photo"
-             srcset="./images/img-team/tatsiana-rudava.jpg 1x, ./images/img-team/tatsiana-rudava@2.jpg 2x" />
+        <img
+          width="200"
+          height="200"
+          src="./images/img-team/Tatsiana-Rudava.jpg"
+          alt="Tatsiana Rudava"
+          class="team-member__photo"
+          srcset="
+            ./images/img-team/Tatsiana-Rudava.jpg   1x,
+            ./images/img-team/Tatsiana-Rudava@2.jpg 2x
+          "
+        />
         <h3 class="team-member__name">Tatsiana Rudava</h3>
         <p class="team-member__description">
-          Mieszka w Warszawie. Miłośniczka przygód, filmów, książek, geografii oraz gotowania. 
-          Swoją ścieżkę kariery rozpoczęła na prawie, a obecnie jest na dobrej drodze do zostania programistką.
+          Mieszka w Warszawie. Miłośniczka przygód, filmów, książek, geografii oraz gotowania. Swoją
+          ścieżkę kariery rozpoczęła na prawie, a obecnie jest na dobrej drodze do zostania
+          programistką.
         </p>
       </div>
       <div class="team-member">
-        <img width="200" height="200" src="./images/img-team/michał-poniatowski.jpg" alt="Michał Poniatowski" class="team-member__photo"
-             srcset="./images/img-team/michał-poniatowski.jpg 1x, ./images/img-team/michał-poniatowski@2.jpg 2x"/>
+        <img
+          width="200"
+          height="200"
+          src="./images/img-team/Michal-Poniatowski.jpg"
+          alt="Michał Poniatowski"
+          class="team-member__photo"
+          srcset="
+            ./images/img-team/Michal-Poniatowski.jpg   1x,
+            ./images/img-team/Michal-Poniatowski@2.jpg 2x
+          "
+        />
         <h3 class="team-member__name">Michał "Poniat" Poniatowski</h3>
         <p class="team-member__description">
-          Mieszka we Wrocławiu. Interesuje się kitesurfing'em, narciarstwem(skitur oraz freeride) oraz kolarstwem. 
-          W wolnych chwilach lubi także pomajsterkować oraz poskładać kilka custom'owych rowerów, 
-          a po tym wszystkim obejrzeć dobry film.  
+          Mieszka we Wrocławiu. Interesuje się kitesurfing'em, narciarstwem(skitur oraz freeride)
+          oraz kolarstwem. W wolnych chwilach lubi także pomajsterkować oraz poskładać kilka
+          custom'owych rowerów, a po tym wszystkim obejrzeć dobry film.
         </p>
       </div>
       <div class="team-member">
-        <img width="200" height="200" src="./images/img-team/bartłomiej-poprawa.jpg" alt="Bartłomiej Poprawa" class="team-member__photo"
-             srcset="./images/img-team/bartłomiej-poprawa.jpg 1x, ./images/img-team/bartłomiej-poprawa@2.jpg 2x" />
+        <img
+          width="200"
+          height="200"
+          src="./images/img-team/Bartlomiej-Poprawa.jpg"
+          alt="Bartłomiej Poprawa"
+          class="team-member__photo"
+          srcset="
+            ./images/img-team/Bartlomiej-Poprawa.jpg   1x,
+            ./images/img-team/Bartlomiej-Poprawa@2.jpg 2x
+          "
+        />
         <h3 class="team-member__name">Bartłomiej Poprawa</h3>
         <p class="team-member__description">
-          Pochodzi z Gliwic. W wolnym czasie zajmuje się programowaniem i graniem na gitarze. 
-          W weekendy studiuje lub wyjeżdża w podróże.
+          Pochodzi z Gliwic. W wolnym czasie zajmuje się programowaniem i graniem na gitarze. W
+          weekendy studiuje lub wyjeżdża w podróże.
         </p>
       </div>
       <div class="team-member">
-        <img width="200" height="200" src="./images/img-team/roland-dąbrowski.jpg" alt="Roland Dąbrowski" class="team-member__photo"
-             srcset="./images/img-team/roland-dąbrowski.jpg 1x, ./images/img-team/roland-dąbrowski@2.jpg 2x" />
+        <img
+          width="200"
+          height="200"
+          src="./images/img-team/Roland-Dabrowski.jpg"
+          alt="Roland Dąbrowski"
+          class="team-member__photo"
+          srcset="
+            ./images/img-team/Roland-Dabrowski.jpg   1x,
+            ./images/img-team/Roland-Dabrowski@2.jpg 2x
+          "
+        />
         <h3 class="team-member__name">Roland Dąbrowski</h3>
         <p class="team-member__description">
-          Mieszka w Nysie, a pochodzi z Terespola. Interesuje się programowaniem oraz motoryzacją.
-          W życiu bardzo ceni sobie wartości rodzinne, spędzanie czasu z najbliższymi i przyjaciółmi. 
-          Jest perfekcjonalistą i wszystko chciałby robić idealnie ale zdaje sobie sprawę z tego, że 
-          jest też niedoskonałym człowiekiem i nie zawsze wszystko udaje się tak jak sobie to zaplanuje.
-          Jest typem logistyka, co w znacznej mierze przekłada się na zachowanie oraz sposób życia.
+          Mieszka w Nysie, a pochodzi z Terespola. Interesuje się programowaniem oraz motoryzacją. W
+          życiu bardzo ceni sobie wartości rodzinne, spędzanie czasu z najbliższymi i przyjaciółmi.
+          Jest perfekcjonalistą i wszystko chciałby robić idealnie ale zdaje sobie sprawę z tego, że
+          jest też niedoskonałym człowiekiem i nie zawsze wszystko udaje się tak jak sobie to
+          zaplanuje. Jest typem logistyka, co w znacznej mierze przekłada się na zachowanie oraz
+          sposób życia.
         </p>
       </div>
       <div class="team-member">
-        <img width="200" height="200" src="./images/img-team/adrian-lacheta.jpg" alt="Adrian Lacheta" class="team-member__photo"
-             srcset="./images/img-team/adrian-lacheta.jpg 1x, ./images/img-team/adrian-lacheta@2.jpg 2x" />
+        <img
+          width="200"
+          height="200"
+          src="./images/img-team/Adrian-Lacheta.jpg"
+          alt="Adrian Lacheta"
+          class="team-member__photo"
+          srcset="
+            ./images/img-team/Adrian-Lacheta.jpg   1x,
+            ./images/img-team/Adrian-Lacheta@2.jpg 2x
+          "
+        />
         <h3 class="team-member__name">Adrian Lacheta</h3>
         <p class="team-member__description">
-          Pochodzi z Rybnika. Pracuje jako programista CNC, główne zainteresowania to maratony, mtb, narty
-           oraz air soft gun. 
+          Pochodzi z Rybnika. Pracuje jako programista CNC, główne zainteresowania to maratony, mtb,
+          narty oraz air soft gun.
         </p>
       </div>
     </div>
