--- a/src/sass/partials/_modal_team.scss
+++ b/src/sass/partials/_modal_team.scss
@@ -77,70 +77,36 @@
       padding-bottom: 30px;
     }
   }
-  &__head-div {
-    display: flex;
-    // justify-content: center;
-    // justify-content: baseline;
-    align-items: center;
-
-    // text-align: center;
-
-    margin-top: 0;
-    margin-bottom: 40px;
-
-    position: relative;
-
-    &::after {
-      content: "";
-      position: absolute;
-      width: 80%;
-      height: 2px;
-      background-color: rgb(192, 192, 192);
-      left: 50%;
-      top: 80px;
-      transform: translate(-50%, -50%);
-  }
-  @include tablet {
-    // justify-content:space-around;
-  }
-  @include desktop {
-    margin: 30px 0 60px 0;
-    justify-content: flex-start;
-    // margin-top: 30px;
-  }
-
-}
-&__head-img {
-  transition: transform 0.25s ease-out;
-    &:hover {
-      transform: scale(1.2);
-    }
-  margin-right: 20px;
-  margin-left: 50px;
-  @include tablet {
-    margin-right: 70px;
-    margin-left: 80px;
-  }
-  @include desktop {
-    margin-right: 240px;
-    margin-left: 200px;
-    // justify-content: flex-start;
-  }
-}
+ 
 &__head-title {
-  font-family: $defaultFontStyle;
-  text-align: right;
-}
+  display: flex;
+  flex-direction: column;   
+  padding-top: 20px;
+  padding-bottom: 20px;
+  border-bottom: 3px solid rgb(192, 192, 192);
+  }
 
   &__header {
-    // text-align: center;
+    font-family: $defaultFontStyle;
+    text-align: center;
+    letter-spacing: 1.2px;
+    font-size: $headFontSize;
+    color: $descritiopnColor;
+    @include tablet {
     letter-spacing: 2px;
-    color: $textFooterColor;
-
-
+    }
   }
+  &__header-icon {
+    width: 14px;
+    height: 13px;
+    margin-left: 7px;
+    margin-right: 8px;
+}
   &__header-add {
-    font-size: 14px;
+    font-family: $defaultFontStyle;
+    text-align: center;
+    padding-top: 10px;
+    font-size: $smallFontSize;
     letter-spacing: 1px;
     color: $propertyColor;
 
@@ -151,6 +117,7 @@
   flex-wrap: wrap;
   justify-content: space-around;
   gap: 10px;
+  padding-top: 20px;
   @include desktop {
     width: 1240px;
     gap: 10px;
@@ -197,6 +164,7 @@
   &__photo {
     margin-bottom: 10px;
     transition: transform 0.25s ease-out;
+    border-radius: 3px;
     &:hover {
       transform: scale(1.05);
       cursor: pointer;
